Closed
Bug 1153948
Opened 11 years ago
Closed 11 years ago
Regression from bug 1151875 - causing issues editing in textarea
Categories
(Firefox for Android Graveyard :: Keyboards and IME, defect)
Tracking
(firefox40 fixed)
RESOLVED
FIXED
Firefox 40
| Tracking | Status | |
|---|---|---|
| firefox40 | --- | fixed |
People
(Reporter: capella, Assigned: jchen)
Details
Attachments
(1 file)
|
972 bytes,
patch
|
esawin
:
review+
|
Details | Diff | Splinter Review |
Using testcase [1], I find issues backspacing after tapping into various text / words in a textarea. Backing out bug 1151875 seems to fix this. STR as I found it:
0) Use SwiftKey keyboard for auto-suggest composition support.
1) Open the link [1].
2) Tap into a word in the top textarea to position the blinking caret.
(SelectionHandler code not involved, actionbar not required)
3) Tap backspace.
4) Tap into another word
5) Tap backspace.
repeating steps 4-5, you should see the caret jump position after tapping backspace.
[1] https://www.dropbox.com/s/j5jcon30y8vda3u/test_bug988143.html?dl=0
| Assignee | ||
Comment 1•11 years ago
|
||
Turns out the fix to bug 1151875 revealed a different bug from before.
nsWindow::PostFlushIMEChanges assumes that when there are changes pending, we must have ready posted the flush message. Therefore, the first time we add a change, we must call nsWindow::PostFlushIMEChanges *first*, when there's no pending change.
Attachment #8592961 -
Flags: review?(esawin)
Comment 2•11 years ago
|
||
Comment on attachment 8592961 [details] [diff] [review]
Fix bug in sending text change notifications (v1)
Review of attachment 8592961 [details] [diff] [review]:
-----------------------------------------------------------------
Good catch.
Attachment #8592961 -
Flags: review?(esawin) → review+
Comment 4•11 years ago
|
||
Assignee: nobody → nchen
Status: NEW → RESOLVED
Closed: 11 years ago
status-firefox40:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → Firefox 40
Updated•5 years ago
|
Product: Firefox for Android → Firefox for Android Graveyard
You need to log in
before you can comment on or make changes to this bug.
Description
•