Bug 1153948 - Fix bug in sending text change notifications; r=esawin